Fixed bug: "Environment variables are not resolved"